force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__AccountNameFormat__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AccountNameFormat__c</fullName>
    <defaultValue>&quot;{firstname} {lastname}&quot;</defaultValue>
    <description>Define an individual&apos;s account name format</description>
    <inlineHelpText>デフォルトでは、取引先名は {firstname} {lastname} という形式で表示されます。順序を変更するには、{lastname} {firstname} と入力します。</inlineHelpText>
    <label>Account Name Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>