force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__PageLayoutApiVersion__c.field-meta.xml
<CustomField>
    <fullName>FinServ__PageLayoutApiVersion__c</fullName>
    <description>Specifies the REST API version when retrieving page layout information</description>
    <inlineHelpText>例: v32.0</inlineHelpText>
    <label>Page Layout Api Version</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>