force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__RestrictACRRecordVisibility__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RestrictACRRecordVisibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict Visibility on ACR Records.</description>
    <inlineHelpText>1 つの取引先/取引先責任者リレーションレコードの取引先と取引先責任者に対して少なくとも参照権限があるユーザのみがリレーションコンポーネントのレコードを表示できます。</inlineHelpText>
    <label>Restrict ACR Record Visibility</label>
    <type>Checkbox</type>
</CustomField>