force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__ShowDetailedError__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ShowDetailedError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows detailed error messages</description>
    <inlineHelpText>権限のない操作が実行されたときに詳細なエラーメッセージが表示されます。</inlineHelpText>
    <label>Show Detailed Error Messages</label>
    <type>Checkbox</type>
</CustomField>