force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__SyncIndividualSystemFields__c.field-meta.xml
<CustomField>
    <fullName>FinServ__SyncIndividualSystemFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Account and Contact system fields are kept in sync when an insert is performed on either entity.</description>
    <inlineHelpText>個人オブジェクトモデルでレコードが作成されると取引先項目と取引先責任者項目を同期します。</inlineHelpText>
    <label>Sync Individual System Fields</label>
    <type>Checkbox</type>
</CustomField>